--- a/style.css
+++ b/style.css
@@ -1,16 +1,42 @@
-.heading{
-    width: 80%;
-    font-size: 22px;
-}
-
-.name_of_objects,#result_object_name,#result_object_accuracy
+body
 {
-    color: darkseagreen;
+  color: white;
+  background: #c0d3ff;
+}
+span
+{
+  font-size: 30px;
+}
+#camera , #result
+{
+  border: 2px dashed black;
+  width: 350px;
+  height: 300px; 
+}
+#result_emotion_name ,#result_emotion_name2  
+{
+  color: black;
+}
+.emotion_name
+{
+  font-size: 40px;
+}
+.emoji
+{
+  font-size:48px;
 }
 
-#camera{
-    border: 2px dashed greenyellow;
-    border-width: 10px;    
-    width: 350px;
-    height: 300px;
+.heading{
+  font-size: 18px;
+  border-radius: 10px;
+  letter-spacing: 10px;
 }
+
+label{
+  font-size: 14px;
+  color: rgba(231, 110, 255, 0.466);
+  padding: 6px;
+  border-radius: 10px;
+  background-color: white;
+}
+
